--- a/placement_alg/run.config
+++ b/placement_alg/run.config
@@ -1,5 +1,5 @@
 [PATHS]
-resultpath = scaleup_bd2/
+resultpath = scaleup_bd/
 topopath = ../annotated_topo/
 
 
@@ -9,7 +9,7 @@ topoloogy = Dataxchange
 
 [CONSTRAINTS]
 # bandwidth in KBytes/s
-linkbandwidth : [1000, 2000, 3000, 4000, 5000, 6000, 7000, 8000]
+linkbandwidth : [500, 1000, 1500, 2000]
 
 
 [TRAFFIC_PARAMS]
